adguard/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
spec:
  parentRefs:
    - name: traefik
      namespace: default
      sectionName: websecure
  hostnames:
    - adguard.burau.dev
  rules:
    - backendRefs:
        - name: adguard-http
          port: 80
