adguard/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-authentik@kubernetescrd
spec:
  rules:
    - host: adguard.burau.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-http
                port:
                  name: http
  tls:
    - hosts:
        - adguard.burau.dev
      secretName: ingress-tls
